--- a/gb/23/11/12/n14114707.md
+++ b/gb/23/11/12/n14114707.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：由李克强之死想到前公安部长李震之死</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/11/id14114708-F-Y9VFFWcAA34q1-600x400-1-1.jpeg" />
 <h6>大陆前媒体人赵兰健贴出的图片显示，李克强女儿就在母亲程虹身边，拒绝与中共领导人对视、握手。（赵兰健X账号截图）
@@ -10,16 +10,16 @@
 <p>这让很多人难以理解，难以接受，疑窦丛生。</p>
 <p>中共官方讲，李克强发病后，被紧急送往上海中医药大学附属曙光医院抢救，却没有送到救治心血管疾病非常有名的复旦大学附属中山医院。</p>
 <p>时评论人士李承鹏在社交平台X上写道：“他走了。（曙光医院的）旁边是抢救心梗成功率高达96%、曾拯救上万病人的上海中山医院。你相信正国级会输给那4%？”</p>
-<p>由李克强离奇之死，我想到了前<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E5%AE%89%E9%83%A8%E9%95%BF.md#1">公安部长</a>李震的离奇之死。</p>
-<p>1973年10月22日，时任<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E5%AE%89%E9%83%A8%E9%95%BF.md#1">公安部长</a>李震，被发现吊死在公安部机关大院地下室的热力管道上，双膝跪地，身体向后仰着，上衣口袋里有几十片安眠药，地上还撒了若干片安眠药。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E9%9C%87%E4%B9%8B%E6%AD%BB.md#1">李震之死</a>非常奇怪：</p>
+<p>由李克强离奇之死，我想到了前公安部长李震的离奇之死。</p>
+<p>1973年10月22日，时任公安部长李震，被发现吊死在公安部机关大院地下室的热力管道上，双膝跪地，身体向后仰着，上衣口袋里有几十片安眠药，地上还撒了若干片安眠药。</p>
+<p>李震之死非常奇怪：</p>
 <p>第一，他要上吊自杀至少要找个能伸直腿的地方，为什么要跪在地上上吊？</p>
 <p>第二，李震口袋里、地上有很多片安眠药，他为什么不直接呑安眠药死了算了，还要搞得这么复杂，口服一部分，口袋留一部分，地上撒一部分，再上吊？</p>
 <p>第三，就在两个月前，1973年8月，李震在中共十大上“当选”中央委员，并继续担任公安部长，他为什么要自杀？</p>
 <p>第四，就在李震死的当天晚上，时任国务院总理周恩来的秘书给李震打过电话。据周的秘书讲，李震在电话里谈笑风生。一个谈笑风生的人，怎么可能一转眼就自杀了？</p>
 <p>从“李震自杀”的现场看，但凡有常识的人都会认为，李震不是死于自杀，很可能是他杀后伪造的现场。</p>
 <p>周恩来得知李震死亡的消息后说：“李震绝大可能是被害”，“李震在政治上中央是信任的，工作上中央是支持的，家庭生活是和睦的，没有自杀因素。”</p>
-<p>当时<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>选定的接班人，中共中央副主席王洪文说：“公安部长李震死了，百分之九十九是被阶级敌人谋杀的。公安部长被杀，古今中外罕见。”</p>
+<p>当时毛泽东选定的接班人，中共中央副主席王洪文说：“公安部长李震死了，百分之九十九是被阶级敌人谋杀的。公安部长被杀，古今中外罕见。”</p>
 <p>原公安部长谢富治的妻子、时任卫生部长刘湘屏也认为，李震死于“他人谋杀”。</p>
 <p>周恩来责成时任国务院副总理华国锋直接领导查案工作。之后，破案组一直按“他杀”进行调查。</p>
 <p>李震死后的第三天，周恩来指示对李震的秘书郑爱萍实行“隔离审查”。</p>
@@ -28,14 +28,14 @@
 <p>1973年10月27日，公安部召开动员大会，公安部政治部主任施义之作动员讲话。第一句话就是：“李部长被害了。”</p>
 <p>施义之传达了中央指示，公安部关起门来搞整顿，停止对外工作联系，大家以党性原则揭发可疑点，追查到底。</p>
 <p>此后，公安部真是风声鹤戾，草木皆兵，一路追查到底是谁杀了部长李震。</p>
-<p>1973年12月的一天，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>听了周恩来关于李震可能死于他杀的汇报后，说：“为什么要杀人呢？要调查研究。”毛列举了明朝皇宫发生的三大疑案，拿出《明史通俗演义》送给周恩来，请他转交华国锋等，要他们读第80回到第82回。</p>
+<p>1973年12月的一天，毛泽东听了周恩来关于李震可能死于他杀的汇报后，说：“为什么要杀人呢？要调查研究。”毛列举了明朝皇宫发生的三大疑案，拿出《明史通俗演义》送给周恩来，请他转交华国锋等，要他们读第80回到第82回。</p>
 <p>毛泽东说：“为什么要杀人呢？”这话听起来有点拗口，实际上，毛的意思是说：“为什么是他杀呢？”</p>
 <p>有了毛的这个“最高指示”后，周恩来的态度变了，华国锋的态度变了，公安部核心小组的态度变了，破案组的态度也变了。</p>
 <p>破案组立即将办案方向，由“他杀”转向“自杀”。到1974年1月，破案组将“他杀”的证据一一排除，最后得出结论：李震是“自杀”的。</p>
 <p>毛发话前，从周恩来到华国锋到公安部核心领导小组到破案组，都认为李震是“他杀”的。现在说李震是“自杀”的，这怎么跟已关门揭、批、查两个月的公安部各级领导交代呢？</p>
 <p>公安部核心小组经研究决定：对李震的死因，分两步向下传达，先讲存在他杀和自杀两种可能，然后再讲是自杀。</p>
 <p>有“英明领袖毛主席”为破案指明方向，所有复杂的问题都变得简单了，从周恩来到华国锋到公安部核心小组到公安部各级领导，都摒弃常识、常情、常理，思想迅速统一到毛的指示精神上——李震是“自杀”的。</p>
-<p>关于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9D%8E%E9%9C%87%E4%B9%8B%E6%AD%BB.md#1">李震之死</a>，还有两出精彩戏：一是抓于桑、刘复之；二是放于桑、刘复之。</p>
+<p>关于李震之死，还有两出精彩戏：一是抓于桑、刘复之；二是放于桑、刘复之。</p>
 <p>李震死后，周恩来责成华国锋领导查办李震之死案。最初，时任公安部副部长于桑、刘复之参与了破案。</p>
 <p>于桑等人经过三天的调查，得出结论：李震是在服用大量安眠药后上吊自杀的。</p>
 <p>1973年10月26日，周恩来率中共政治局委员在人民大会堂，召集公安部核心小组全体成员开会。公安部副部长于桑、刘复之刚一进去，就被中央警卫局的军人奉命抓走，说是对他们进行“保护审查”。</p>
@@ -48,52 +48,52 @@
 <p>李震之死，与毛有什么关系？</p>
 <p>李震之死具体与毛有什么关系，现在能看到的材料很少，这个黑幕还有待进一步揭开。</p>
 <p>但是，说到毛与公安部长、副部长，北京市公安局长、副局长的关系，可谓重大。</p>
-<p>文革爆发后，毛因<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%96%91%E5%BF%83.md#1">疑心</a>公安部官员、北京市公安局官员可能参与搞政变，担心他们搞暗杀，害他的性命，将文革前的公安部、北京市公安局几乎是一锅端了。</p>
+<p>文革爆发后，毛因疑心公安部官员、北京市公安局官员可能参与搞政变，担心他们搞暗杀，害他的性命，将文革前的公安部、北京市公安局几乎是一锅端了。</p>
 <p>对毛忠心耿耿的公安部第一任部长罗瑞卿，被毛整到跳楼自杀的地步。</p>
 <p>罗摔断了腿没有死成，毛还是不放过他，说，“罗瑞卿自杀由他自己负责，罗的事还没有完。”“罗向中央要挟没有用，（批罗的）会议继续开。”</p>
 <p>文革爆发后，罗被打成“彭罗陆杨反党集团”成员，受尽肉体和精神折磨。</p>
-<p>公安部常务副部长徐子荣、杨奇清、汪金祥、凌云、严佑民和一批正、副局长，都被关进监狱，徐子荣活活折磨致死。公安部许多官员被打成“叛徒”、“特务”、“反革命”、“死不悔改的走资派”。</p>
+<p>公安部常务副部长徐子荣、杨奇清、汪金祥、凌云、严佑民和一批正、副局长，都被关进监狱，徐子荣活活折磨致死。公安部许多官员被打成“叛徒”“特务”“反革命”“死不悔改的走资派”。</p>
 <p>北京市公安局前局长冯基平；北京市公安局长邢相生，副局长吕展、闵步瀛、阎塘、张烈、李一平、张锋、焦昆；文革爆发后从公安部派到北京市公安局任局长的李钊等，全都被逮捕入狱，整得死去活来。</p>
 <p>以上公安部官员、北京市公安局官员，在文革结束后都平反了。</p>
-<p>这说明，毛对他们的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%96%91%E5%BF%83.md#1">疑心</a>是没有任何根据的。但是，毛就疑心他们了，毛就打倒他们了，毛就把他们中的许多人整得妻离子散、家破人亡了。</p>
+<p>这说明，毛对他们的疑心是没有任何根据的。但是，毛就疑心他们了，毛就打倒他们了，毛就把他们中的许多人整得妻离子散、家破人亡了。</p>
 <p>毛疑心李震对他不忠，存心置李震于死地，完全有可能。</p>
 <p>否则，明眼人一看就知道李震是他杀的，为什么毛就看不出来呢？</p>
 <p>李震在文革中“听毛主席的话，按毛主席指示办”，最后竟因为毛的一句话，变成“畏罪自杀”，实在是可悲、可叹！</p>
-<p>其实，回顾百年中共史，中共就是一部在“斗争哲学”支配下的绞肉机。今天，你得势了，可能整别人；明天，别人得势了，又会来整你。就这样，你整我，我整你，内斗不息，恶性循环，怨怨相报，走到了今天。</p>
+<p>其实，回顾百年中共史，中共就是一部在“斗争哲学”支配下的绞肉机。今天，你得势了，可能整别人；明天，别人得势了，又会来整你。就这样，你整我，我整你，内斗不息，恶性循环，冤冤相报，走到了今天。</p>
 <p>今天，李克强不明不白死了，明天呢？</p>
 <p>大纪元首发</p>
 <p>责任编辑：高义</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096695.md#1">王友群：中共即将灭亡 “三退”可保平安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105584.md#1">王友群：文革中康生为何杀一前政治局常委？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112475.md#1">王友群：1976年周恩来朱德毛泽东是怎么死的？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113410.md#1">王友群：习近平坐在中共内斗的火山口上</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/16/n14096695.md#1">王友群：中共即将灭亡 “三退”可保平安</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/29/n14105584.md#1">王友群：文革中康生为何杀一前政治局常委？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/8/n14112475.md#1">王友群：1976年周恩来朱德毛泽东是怎么死的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/10/n14113410.md#1">王友群：习近平坐在中共内斗的火山口上</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/4/25/n11213719.md#1" target="_blank">许茹：火灾爆炸频发京城连震 昭示奸佞当道</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672735.md#1" target="_blank">为反右开场祭旗：三人被处决 万人围观</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/5/5/n2105459.md#1" target="_blank">纪实报告：法轮大法真相</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110441.md#1">【未解之谜】全中！预言中国国运的马前课（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/6/n14110798.md#1">一年养生就从立冬起 补肾养藏精气</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/1/n14107900.md#1">千载琵琶语 唐诗里的华音绝唱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/2/n14108142.md#1">只羡鸳鸯齐升仙 书仙曹文姬传奇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14106947.md#1">宋代市井有名医 能为皇族治顽疾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114115.md#1">【时事金扫描】兰州4女生失踪 影星买囚犯器官</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114392.md#1">【全球新闻】澳洲与太平洋岛国签署安全协议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112370.md#1">【百年真相】如何成超级骗子？恒大发家内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113431.md#1">【翻墙必看】分析：中国或发生惊天动地大事变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14112915.md#1">【独家】知情人士透露彭立发近况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14113364.md#1">【菁英论坛】中共金融会议 房市判死刑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14112874.md#1">TWICE定延与子瑜休假时做义工 帮助流浪动物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14113257.md#1">旅居日本近30年 梁朝伟自曝不会讲日语主因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114058.md#1">周慧敏庆56岁生日 晒恬静自拍照泄近况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/10/n14114024.md#1">惠英红自曝已做心脏手术 手脚轻碰满是瘀青</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/9/n14113357.md#1">53岁宣萱分享：不整容靠简单一招瘦脸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112405.md#1">铁锅料理更健康美味 4步让铁锅变不沾锅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/31/n14107124.md#1">亚马逊美容护肤品大促销 优惠精选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071195.md#1">已过青春期为何仍长痘？成人痘不是青春痘！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103525.md#1">人工营养补充剂别乱吃！成分、风险、吃法一次看</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112373.md#1">释放超能力 针对特定皮肤的7款最佳精华液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/12/n14114707.htm">王友群：由李克强之死想到前公安部长李震之死</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114707.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/11/12/n14114707.htm">王友群：由李克强之死想到前公安部长李震之死</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/12/n14114707.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
